# bibliome

./: .env.example  .gitignore  DEPLOYMENT.md  OAUTH_SETUP.md  README.md  README_SETUP.md  admin_operations.py  alerting.py  api_clients.py  app.py  atproto_identity.py  atproto_oauth.py  atproto_security.py  auth.py  auth_diagnostics.py  auth_oauth.py  auth_retry.py  bibliome_scanner.py  bluesky_automation.py  check_db.py  circuit_breaker.py  components.py  cover_cache.py  cover_cache_job.py  database_cleanup.py  database_manager.py  db_write_queue.py  dependency_graph.py  direct_pds_client.py  firehose.cursor  generate_jwk.py  historical_scanner.py  hybrid_discovery.py  ingester.py  logging_config.py  main.py  meta_utils.py  migrate_existing_covers.py  models.py  nixpacks.toml  (+14 more)
.github/: release-drafter.yml
.github/workflows/: release-drafter.yml  test.yml
bibliome/: __init__.py
bibliome/atproto/: __init__.py  records.py
bibliome/auth/: __init__.py  bluesky.py  diagnostics.py  middleware.py  retry.py
lexicons/: com.bibliome.book.json  com.bibliome.bookshelf.json  com.bibliome.comment.json
migrations/: 0001-initialize.sql  0002-add-self-join.sql  0003-add-process-monitoring.sql  0004-add-historical-tracking.sql  0004-add-remote-origin-tracking.sql  0005-remove-upvote-system.sql  0006-add-comments.sql  0007-add-comment-atproto-sync.sql  0008-add-cover-caching.sql  0009-add-rate-limit-tracking.sql  0010-add-oauth-support.sql  0010-add-oauth-tables.sql  0011-add-performance-monitoring.sql
scripts/: check_db.py
static/: README.md
tests/: conftest.py
(+29 files in other folders)
